# awareness-without-synthesis

./: LICENSE  README.md  pyproject.toml  requirements.txt
aws_align/: __init__.py  align.py  cli.py  csc.py  fragmentation.py  io.py
data/demo/: alignment_raw.csv  citation_cluster_insularity.csv  paper_topics.csv  rbo_fragmentation.csv  semantic_topics.csv
tests/: test_align.py  test_csc.py
